yoshimi 1.5.6 M

2017-12-31 Will
* Removed some redundant threadmessage code.
* Listed proposed new root & bank commands.
* Last 2017 bugfix! MIDI-learn block didn't :(

2017-12-30 Will
* Moved all key shifts out of RBP thread.
* Moved master fine detune out of RBP thread.
* Removed (now redundant) RBP thread.
* Updated docs.

2017-12-29 Will
* Revised old config warning.
  Now centred on master window an only
  recognises config files.
* Moved other use of message window to master ui.
* BugFix: MIDI-learn init was killing message window.

2017-12-28 Will
* Reinstated safe version of localpath().
* Applied PATH_MAX patch from debian maintainer.

2017-12-27 Will
* Refactored bank removal code.
* Improved bank import reporting.
* Updated docs.
* Master reset can now clear MIDI-learn.
* Moved panic stop out of RBP thread.
  This will eventually be cleared completely.

2017-12-26 Will
* Removed dependency on PATH_MAX
* Removed inclusion of local path in banks/presets.
* Removed redundant localPath function from MiscFuncs.
* Improved response time finding/displaying manual.
* Completed CLI bank import.
* Moved build number to ConfBuild.h
* Corrected and added instructions to INSTALL.
* More doc updates - I was bored!

2017-12-21 Will
* Implemented import of complete banks.
* Updated docs.
* BugFix: duplicate entry test in wrong place :(
  Wiping out paired .xiz and .xiy in exiting banks.
* More doc updates.

2017-12-16 Will
* Included current manual.
* Yoshimi now looks for specific manual version.
* Set release version 1.5.6

2017-12-15 Will
* Tidied up microtonal reporting.
* Improved MIDI part/channel decoding.
* Implemented breath control enable switch.
* Set version as 1.5.6 rc1.

2017-12-14 Will
* Merged in BSD bugfixes from Tobias
* Changed source location of user manual.
  Separate lines in CMake no longer needed.
* MIDI-learn now has a threshold setting for switches.
* BugFix: More missing GUI messages found :(